<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_this_app_desc">Information about this app and its developer</string>
    <string name="about_this_app_title">About this app</string>
    <string name="accent_saturation">Accent saturation</string>
    <string name="accurate_shades_desc">Keep accurate shades for accent colors</string>
    <string name="accurate_shades_title">Accurate shades</string>
    <string name="advanced_settings">Advanced</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_moto">Express yourself with colors</string>
    <string name="app_name">ColorBlendr</string>
    <string name="app_service_desc_off">Theming is inactive</string>
    <string name="app_service_desc_on">Theming is active</string>
    <string name="app_service_title">%s service</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="background_lightness">Background lightness</string>
    <string name="background_saturation">Background saturation</string>
    <string name="background_service_notification_channel_text">You can turn off these notifications.</string>
    <string name="background_service_notification_channel_title">Background service</string>
    <string name="background_service_notification_text">Useless notification. Tap to disable.</string>
    <string name="background_service_notification_title">Background service</string>
    <string name="backup">Backup</string>
    <string name="backup_fail">Backup failed</string>
    <string name="backup_restore_desc">"Share the delight of your theme's unique look and feel by saving and sharing your configuration"</string>
    <string name="backup_restore_title">Backup &amp; restore configs</string>
    <string name="backup_success">Backup successful</string>
    <string name="basic_colors">Basic colors</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_continue">Continue</string>
    <string name="buymeacoffee_desc">Consider buying me a coffee</string>
    <string name="buymeacoffee_title">Enjoying this app?</string>
    <string name="cannot_override_color">Cannot override this color</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_method">Choose method</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="colorPickerDialog_alpha">A</string>
    <string name="colorPickerDialog_blue">B</string>
    <string name="colorPickerDialog_brightness">V</string>
    <string name="colorPickerDialog_dialogName">Color Picker</string>
    <string name="colorPickerDialog_grant_permissions">Grant Permissions</string>
    <string name="colorPickerDialog_green">G</string>
    <string name="colorPickerDialog_hsv">HSV</string>
    <string name="colorPickerDialog_hue">H</string>
    <string name="colorPickerDialog_image">Image</string>
    <string name="colorPickerDialog_imageColorPicker">Pick Color from Image</string>
    <string name="colorPickerDialog_msg_grant_permissions">"Please grant the 'External Storage' permissions to continue."</string>
    <string name="colorPickerDialog_msg_image_invalid">"Couldn't use this image."</string>
    <string name="colorPickerDialog_preset">Preset</string>
    <string name="colorPickerDialog_red">R</string>
    <string name="colorPickerDialog_rgb">RGB</string>
    <string name="colorPickerDialog_saturation">S</string>
    <string name="colorPickerDialog_title_all_photos">All Photos</string>
    <string name="color_code">Color code: %s</string>
    <string name="color_palette_desc">Explore all the colors of your material palette</string>
    <string name="color_palette_root_warn">Tap on any color in the palette to customize its appearance; long press to reset to the default color.</string>
    <string name="color_palette_rootless_warn">Tap on any color in the palette to copy its hexadecimal color code.</string>
    <string name="color_palette_title">Color palette</string>
    <string name="color_picker_preview">Color picker preview</string>
    <string name="colors">Colors</string>
    <string name="confirmation_desc">This will override your current theme and configuration.</string>
    <string name="confirmation_title">Are you sure?</string>
    <string name="contributors">Contributors behind the scene</string>
    <string name="copy">Copy</string>
    <string name="custom_primary_color_desc">Generate palette from custom color</string>
    <string name="custom_primary_color_title">Custom primary color</string>
    <string name="custom_secondary_color_desc">Custom secondary color</string>
    <string name="custom_secondary_color_summary">Select pure white color to disable</string>
    <string name="custom_tertiary_color_desc">Select pure white color to disable</string>
    <string name="custom_tertiary_color_title">Custom tertiary color</string>
    <string name="darker_launcher_icons_desc">Apply a darker background to pixel launcher monochrome icons</string>
    <string name="darker_launcher_icons_title">Darker launcher icons</string>
    <string name="description">Description</string>
    <string name="dev_bio">Learner | Developer | Designer</string>
    <string name="dev_name">DrDisagree</string>
    <string name="disable_battery_optimization_hint">"It's not mandatory but recommended to disable the battery optimization"</string>
    <string name="dismiss">Dismiss</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="file_access_permission_required">Files access required to generate wallpaper colors.</string>
    <string name="filter_all">All apps</string>
    <string name="filter_app_category">Select app category</string>
    <string name="filter_launchable_apps">Launchable apps</string>
    <string name="filter_system_apps">System apps</string>
    <string name="filter_user_apps">User apps</string>
    <string name="force_per_app_theme_desc">Apply custom colors to specific apps which do not follow system monet</string>
    <string name="force_per_app_theme_title">Force per app theme</string>
    <string name="github">GitHub</string>
    <string name="grant">Grant</string>
    <string name="grant_all_permissions">Please grant all permissions to proceed</string>
    <string name="icon">Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="long_press_to_reset">Long press to reset</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="meet_the_developer">Meet the developer</string>
    <string name="news">News</string>
    <string name="note_title">Note:</string>
    <string name="onboarding_image">Onboarding image</string>
    <string name="per_app_theme_warn">You may have noticed that certain apps not following system theme, a result of the MaterialComponents update (v1.11.0+). Manually select those apps here to apply the theme, and remember to close and reopen those apps to see the changes take effect.</string>
    <string name="perm_one_desc">This permission is required to keep the service alive in background.</string>
    <string name="perm_one_title">Post Notifications</string>
    <string name="perm_three_desc">This permission is required to retrieve home and lockscreen wallpaper.</string>
    <string name="perm_three_title">All Files Access</string>
    <string name="perm_two_desc">This permission is required to retrieve home and lockscreen wallpaper.</string>
    <string name="perm_two_title">Read Media Images</string>
    <string name="permissions">Permissions</string>
    <string name="restore">Restore</string>
    <string name="seed_color_picker_desc">Create palette based on custom color</string>
    <string name="seed_color_picker_title">Custom primary color</string>
    <string name="support">Support</string>
    <string name="wallpaper_colors">Wallpaper colors</string>
</resources>