<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/guidelineTop" style="@style/TextAppearance.Material3.HeadlineLarge" />
    <androidx.core.widget.NestedScrollView android:gravity="center" android:id="@id/nestedScrollView" android:scrollbars="vertical" android:fadingEdgeLength="16.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip" android:fillViewport="true" android:requiresFadingEdge="vertical" app:layout_constraintBottom_toTopOf="@id/guidelineBottom" app:layout_constraintEnd_toEndOf="@id/guidelineRight" app:layout_constraintStart_toStartOf="@id/guidelineLeft" app:layout_constraintTop_toBottomOf="@id/textView">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" android:layout_marginHorizontal="12.0dip">
            <com.drdisagree.colorblendr.ui.widgets.SelectableViewWidget android:id="@id/post_notifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" app:descriptionText="@string/perm_one_desc" app:titleText="@string/perm_one_title" />
            <com.drdisagree.colorblendr.ui.widgets.SelectableViewWidget android:id="@id/read_media_images" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" app:descriptionText="@string/perm_two_desc" app:titleText="@string/perm_two_title" />
            <com.drdisagree.colorblendr.ui.widgets.SelectableViewWidget android:id="@id/all_files_access" android:layout_width="fill_parent" android:layout_height="wrap_content" app:descriptionText="@string/perm_three_desc" app:titleText="@string/perm_three_title" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineTop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.8" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.13" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineRight" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.87" />
</androidx.constraintlayout.widget.ConstraintLayout>
