<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:id="@id/nestedScrollView" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.material.card.MaterialCardView android:orientation="vertical" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/container_margin_bottom" android:layout_marginHorizontal="@dimen/container_margin_horizontal" style="@style/Widget.Material3.CardView.Outlined">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <com.drdisagree.colorblendr.ui.views.RoundedMaterialButtonToggleGroup android:gravity="center" android:id="@id/colors_toggle_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:divider="@drawable/divider_toggle_button" android:showDividers="middle" android:dividerPadding="8.0dip" android:layout_marginHorizontal="22.0dip" app:checkedButton="@id/wallpaper_colors_button" app:selectionRequired="true" app:singleSelection="true">
                        <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:id="@id/wallpaper_colors_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/wallpaper_colors" android:paddingVertical="8.0dip" style="@style/Widget.Material3.Button.TextButton" />
                        <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:id="@id/basic_colors_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/basic_colors" android:paddingVertical="8.0dip" style="@style/Widget.Material3.Button.TextButton" />
                    </com.drdisagree.colorblendr.ui.views.RoundedMaterialButtonToggleGroup>
                    <com.google.android.flexbox.FlexboxLayout android:layout_gravity="center" android:id="@id/wallpaper_colors_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="24.0dip" android:layout_marginHorizontal="24.0dip" app:alignContent="center" app:alignItems="center" app:flexDirection="row" app:flexWrap="wrap" app:justifyContent="center" app:layout_flexBasisPercent="25.0%" app:layout_flexGrow="1.0" app:layout_flexShrink="1.0" />
                    <com.google.android.flexbox.FlexboxLayout android:layout_gravity="center" android:id="@id/basic_colors_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="24.0dip" android:layout_marginHorizontal="24.0dip" app:alignContent="center" app:alignItems="center" app:flexDirection="row" app:flexWrap="wrap" app:justifyContent="center" app:layout_flexBasisPercent="25.0%" app:layout_flexGrow="1.0" app:layout_flexShrink="1.0" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.drdisagree.colorblendr.ui.widgets.ColorPickerWidget android:id="@id/seed_color_picker" android:layout_width="fill_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_paint" app:previewColor="@android:color/system_accent1_400" app:summaryText="@string/seed_color_picker_desc" app:titleText="@string/seed_color_picker_title" />
            <com.drdisagree.colorblendr.ui.widgets.MenuWidget android:id="@id/color_palette" android:layout_width="fill_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_table_view" app:showEndArrow="true" app:summaryText="@string/color_palette_desc" app:titleText="@string/color_palette_title" />
            <com.drdisagree.colorblendr.ui.widgets.MenuWidget android:id="@id/per_app_theme" android:layout_width="fill_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_app_widgets" app:showEndArrow="true" app:summaryText="@string/force_per_app_theme_desc" app:titleText="@string/force_per_app_theme_title" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <include android:id="@id/header" layout="@layout/view_toolbar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
