<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/container" android:paddingTop="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center" android:id="@id/app_icon" android:layout_width="96.0dip" android:layout_height="96.0dip" android:layout_marginBottom="8.0dip" android:contentDescription="@string/app_name" />
    <com.google.android.material.textview.MaterialTextView android:textColor="?colorOnSurface" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" style="?textAppearanceTitleMedium" />
    <com.google.android.material.textview.MaterialTextView android:textSize="13.0sp" android:textColor="?colorOnSurface" android:layout_gravity="center_horizontal" android:id="@id/version_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:alpha="0.8" style="?textAppearanceBodySmall" />
    <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="24.0dip" app:cardBackgroundColor="?colorSurfaceContainer" app:cardMaxElevation="0.0dip" app:strokeWidth="0.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:alpha="0.8">
            <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:textColor="?colorOnBackground" android:id="@id/btn_news" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/news" android:drawableTop="@drawable/ic_news_scaled" android:layout_weight="1.0" android:drawableTint="?colorOnBackground" app:cornerRadius="@dimen/default_corner_radius" app:iconPadding="2.0dip" app:iconSize="16.0dip" style="@style/Widget.Material3.Button.IconButton" />
            <View android:background="?colorSurface" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginVertical="@dimen/container_margin_horizontal" />
            <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:textColor="?colorOnBackground" android:id="@id/btn_support" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/support" android:drawableTop="@drawable/ic_help_scaled" android:layout_weight="1.0" android:drawableTint="?colorOnBackground" app:cornerRadius="@dimen/default_corner_radius" app:iconPadding="2.0dip" app:iconSize="16.0dip" style="@style/Widget.Material3.Button.IconButton" />
            <View android:background="?colorSurface" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginVertical="@dimen/container_margin_horizontal" />
            <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:textColor="?colorOnBackground" android:id="@id/btn_github" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/github" android:drawableTop="@drawable/ic_github_scaled" android:layout_weight="1.0" android:drawableTint="?colorOnBackground" app:cornerRadius="@dimen/default_corner_radius" app:iconPadding="2.0dip" app:iconSize="16.0dip" style="@style/Widget.Material3.Button.IconButton" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textview.MaterialTextView android:textColor="?colorOnSurface" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/meet_the_developer" style="?textAppearanceTitleMedium" />
    <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" app:cardBackgroundColor="?colorSurfaceContainer" app:cardCornerRadius="12.0dip" app:cardMaxElevation="0.0dip" app:strokeWidth="0.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/developer" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="22.0dip" android:paddingVertical="16.0dip">
                <de.hdodenhof.circleimageview.CircleImageView android:layout_gravity="center" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/img_drdisagree" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:gravity="start|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <com.google.android.material.textview.MaterialTextView android:textColor="?colorOnSurface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_name" style="?textAppearanceTitleSmall" />
                    <com.google.android.material.textview.MaterialTextView android:textColor="?colorOnSurface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/dev_bio" android:alpha="0.8" style="?textAppearanceBodySmall" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="?colorSurface" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginHorizontal="@dimen/container_margin_horizontal" />
            <LinearLayout android:orientation="horizontal" android:id="@id/buymeacoffee" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="22.0dip" android:paddingVertical="16.0dip">
                <FrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginEnd="16.0dip">
                    <ImageView android:layout_gravity="center" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/buymeacoffee_bg" android:contentDescription="@string/icon" app:tint="?colorOnSurface" />
                    <ImageView android:layout_gravity="center" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/buymeacoffee_fg" android:contentDescription="@string/icon" app:tint="?colorPrimary" />
                </FrameLayout>
                <LinearLayout android:gravity="start|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <com.google.android.material.textview.MaterialTextView android:textColor="?colorOnSurface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buymeacoffee_title" style="?textAppearanceTitleSmall" />
                    <com.google.android.material.textview.MaterialTextView android:textColor="?colorOnSurface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/buymeacoffee_desc" android:alpha="0.8" style="?textAppearanceBodySmall" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
