<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/guidelineTop" style="@style/TextAppearance.Material3.HeadlineLarge" />
    <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_moto" android:alpha="0.8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView" style="@style/TextAppearance.Material3.HeadlineLarge" />
    <ImageView android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/ic_onboarding_img" android:adjustViewBounds="true" android:contentDescription="@string/onboarding_image" android:layout_marginHorizontal="32.0dip" android:layout_marginVertical="40.0dip" app:layout_constraintBottom_toBottomOf="@id/guidelineBottom" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineTop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>
