<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@id/container" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/container_margin_horizontal" android:layout_marginVertical="12.0dip" app:cardBackgroundColor="?colorPrimaryContainer" app:cardMaxElevation="0.0dip" app:strokeWidth="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView android:textStyle="bold" android:textColor="?colorOnPrimaryContainer" android:layout_gravity="start|center" android:id="@id/warnText" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/note_title" android:layout_weight="1.0" android:justificationMode="inter_word" style="?textAppearanceBodyMedium" />
            <ImageView android:layout_gravity="end|center" android:id="@id/close" android:background="@drawable/ic_close" android:padding="12.0dip" android:clickable="true" android:layout_width="24.0dip" android:layout_height="24.0dip" android:foreground="?selectableItemBackground" android:contentDescription="@string/icon" android:backgroundTint="?colorOnPrimaryContainer" />
        </LinearLayout>
        <com.google.android.material.textview.MaterialTextView android:textColor="?colorOnPrimaryContainer" android:layout_gravity="start|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/per_app_theme_warn" android:alpha="0.8" android:layout_marginEnd="6.0dip" android:justificationMode="inter_word" style="?textAppearanceBodySmall" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
